
! KGySoft.Drawing.Imaging namespace
===================================
! Every method with a System.Drawing.Imaging.PixelFormat enum parameter have been changed to use the
  KGySoft.Drawing.Imaging.KnownPixelFormat enum type instead. The field names of both enums are the same.
! IBitmapData interface:
  ! The type of the PixelFormat property from now on returns a PixelFormatInfo struct rather than an enum value of
    the System.Drawing.Imaging.PixelFormat type. It now supports custom formats better and you still can convert it
    to a known format if needed.
! BitmapDataExtensions class:
  ! The ToBitmap/BeginToBitmap/EndToBitmap/ToBitmapAsync methods are now in the ReadableBitmapDataExtensions class
    of the KGySoft.Drawing package. When recompiling C# sources, this is not a breaking change if you use the
    KGySoft.Drawing package and use these methods as extensions (without the class name).
  + New Clone/CopyTo/DrawInto/Clear/TransformColors/Quantize/Dither overloads with IAsyncContext parameter.
+ New KnownPixelFormat enum. The names of the actual formats are compatible with System.Drawing.Imaging.PixelFormat
  but some of them have different underlying values. Use the ToPixelFormat extension from KGySoft.Drawing to convert
  it to a System.Drawing.Imaging.PixelFormat.
+ New KnownPixelFormatExtensions class
+ Palette class:
  + New public constructor to create a new Palette from an existing one with different back color and alpha
    threshold values.
  + The IsGrayscale and HasAlpha properties have been made public.
+ PixelFormatInfo struct:
  + New public constructor from KnownPixelFormat
  + New IsCustomFormat property
  + Implementing IEquatable<PixelFormatInfo>
  + Equality and inequality operators are overloaded
  + New ToKnownPixelFormat method

NOTE: See the history of older versions at the following link:
https://github.com/koszeggy/KGySoft.Drawing/blob/master/Specific/GdiPlus/KGySoft.Drawing/changelog.txt