@@ -1,0 +1,74 @@
+﻿#if !NET35
+#region Copyright
+
+///////////////////////////////////////////////////////////////////////////////
+//  File: QuantizerExtensions.cs
+///////////////////////////////////////////////////////////////////////////////
+//  Copyright (C) KGy SOFT, 2005-2022 - All Rights Reserved
+//
+//  You should have received a copy of the LICENSE file at the top-level
+//  directory of this distribution.
+//
+//  Please refer to the LICENSE file if you want to use this source code.
+///////////////////////////////////////////////////////////////////////////////
+
+#endregion
+
+#region Usings
+
+using System;
+using System.Threading.Tasks;
+
+using KGySoft.Threading;
+
+#endregion
+
+namespace KGySoft.Drawing.Imaging
+{
+    /// <summary>
+    /// Contains extension methods for the <see cref="IQuantizer"/> type.
+    /// </summary>
+    public static class QuantizerExtensions
+    {
+        #region Methods
+
+        #region Public Methods
+
+        /// <summary>
+        /// Gets an <see cref="IQuantizingSession"/> instance potentially asynchronously that can be used to quantize the colors of the specified <see cref="IReadableBitmapData"/> instance.
+        /// If <paramref name="quantizer"/> is a known quantizer that can be evaluated quickly, then this method might be executed synchronously.
+        /// <br/>This method is available in.NET Framework 4.0 and above.
+        /// </summary>
+        /// <param name="quantizer">An <see cref="IQuantizer"/> instance to get an <see cref="IQuantizingSession"/> for.</param>
+        /// <param name="source">The quantizing session to be initialized will be performed on the specified <see cref="IReadableBitmapData"/> instance.</param>
+        /// <param name="asyncConfig">The configuration of the asynchronous operation such as parallelization, cancellation, reporting progress, etc. This parameter is optional.
+        /// <br/>Default value: <see langword="null"/>.</param>
+        /// <returns>A task that represents the asynchronous operation. Its result is an <see cref="IQuantizingSession"/> instance that can be used to quantize the colors of the specified <see cref="IReadableBitmapData"/> instance
+        /// or <see langword="null"/>, if the operation was canceled and the <a href="https://docs.kgysoft.net/corelibraries/?topic=html/P_KGySoft_Threading_AsyncConfigBase_ThrowIfCanceled.htm" target="_blank">ThrowIfCanceled</a>property of the <paramref name="asyncConfig"/> parameter was <see langword="false"/>.</returns>
+        /// <exception cref="InvalidOperationException">The non-canceled <see cref="IQuantizer.Initialize">IQuantizer.Initialize</see> method returned <see langword="null"/>.</exception>
+        public static Task<IQuantizingSession?> InitializeAsync(this IQuantizer quantizer, IReadableBitmapData source, TaskConfig? asyncConfig = null)
+            // PredefinedColorsQuantizer is known to be fast so initializing it synchronously
+            => quantizer is PredefinedColorsQuantizer
+                ? AsyncHelper.FromResult(quantizer.Initialize(source), asyncConfig)
+                : AsyncHelper.DoOperationAsync(ctx => DoInitializeSessionAsync(ctx, source, quantizer), asyncConfig);
+
+        #endregion
+
+        #region Private Methods
+
+        private static IQuantizingSession? DoInitializeSessionAsync(IAsyncContext context, IReadableBitmapData source, IQuantizer quantizer)
+        {
+            if (context.IsCancellationRequested)
+                return null;
+            IQuantizingSession result = quantizer.Initialize(source, context);
+            if (result == null && !context.IsCancellationRequested)
+                throw new InvalidOperationException(Res.ImagingQuantizerInitializeNull);
+            return context.IsCancellationRequested ? null : result;
+        }
+
+        #endregion
+
+        #endregion
+    }
+}
+#endif
